--- a/modules/agent/src/main/resources/bin/extConfig.yml
+++ b/modules/agent/src/main/resources/bin/extConfig.yml
@@ -28,6 +28,8 @@ log:
   saveDays: 7
   # 日志文件的编码格式，如果没有指定就自动识别，自动识别可能出现不准确的情况
   fileCharset:
+  # 查看日志时初始读取最后多少行（默认10，0不读取）
+  intiReadLine: 10
 consoleLog:
   # 是否记录接口请求日志
   reqXss: true
