--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -23,6 +23,17 @@
         </dependency>
 
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+
+        <dependency>
             <groupId>cn.keepbx.jpom</groupId>
             <artifactId>common</artifactId>
             <version>${pom.version}</version>
