--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
+            <version>4.1.38.Final</version>
         </dependency>
 
         <dependency>
