--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>Jpom</artifactId>
-        <groupId>cn.keepbx</groupId>
+        <groupId>cn.keepbx.Jpom</groupId>
         <version>2.4.3</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>Jpom 公共模块</name>
-    <groupId>cn.keepbx.jpom</groupId>
     <artifactId>common</artifactId>
     <version>2.4.3</version>
 
