--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
     </parent>
-    <groupId>cn.keepbx</groupId>
+    <groupId>cn.keepbx.Jpom</groupId>
     <artifactId>Jpom</artifactId>
     <name>Jpom Java项目在线管理</name>
     <description>
