--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,9 @@
         </profile>
         <profile>
             <id>install-plugin-profile</id>
+        </profile>
+        <profile>
+            <id>release-plugin-profile</id>
             <distributionManagement>
                 <snapshotRepository>
                     <id>maven-repo</id>
