--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </description>
     <inceptionYear>2017</inceptionYear>
     <version>2.4.3</version>
+    <url>https://gitee.com/keepbx/Jpom</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -198,4 +199,12 @@
             </build>
         </profile>
     </profiles>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 </project>
