--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -56,10 +56,11 @@
                         </manifest>
                         <manifestEntries>
                             <!-- 项目版本号 -->
-                            <!--    <Jpom-Project-Version>${project.version}</Jpom-Project-Version>-->
+                            <Jpom-Project-Version>${project.version}</Jpom-Project-Version>
                             <!-- 打包时间 -->
                             <Jpom-Timestamp>${maven.build.timestamp}</Jpom-Timestamp>
                             <Jpom-Type>${project.artifactId}</Jpom-Type>
+                            <Implementation-URL>https://gitee.com/keepbx/Jpom</Implementation-URL>
                         </manifestEntries>
                     </archive>
                 </configuration>
