--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -121,5 +121,8 @@
         <profile>
             <id>install-plugin-profile</id>
         </profile>
+        <profile>
+            <id>release-plugin-profile</id>
+        </profile>
     </profiles>
 </project>
