--- a/modules/common/pom.xml
+++ b/modules/common/pom.xml
@@ -21,4 +21,13 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>release-plugin-profile</id>
+        </profile>
+        <profile>
+            <id>install-plugin-profile</id>
+        </profile>
+    </profiles>
 </project>
