--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>jpom-parent</artifactId>
         <groupId>io.jpom</groupId>
         <version>2.4.8</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>Jpom 服务端</name>
@@ -58,6 +58,12 @@
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.5.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
         </dependency>
     </dependencies>
     <build>
