添加 sha1 js & 登录跳转面板页

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "qs": "^6.9.4",
+    "sha1": "^1.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.8"
   },
