添加 vuex 状态管理

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -14,7 +14,8 @@
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.8"
+    "vue-router": "^3.4.8",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
