--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.7.1",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.11",
