add new version for login

--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -27,8 +27,8 @@ banner:
   msg: Jpom-Server 管理系统启动中
 # 静态资源配置
 interceptor:
-  resourceHandler: /static/**,/favicon.ico
-  resourceLocation: classpath:/static/,classpath:/static/favicon.ico
+  resourceHandler: /**,/static/**,/favicon.ico
+  resourceLocation: classpath:/dist/,classpath:/static/,classpath:/static/favicon.ico
 # 启动完成自动初始化指定包
 preload:
   packageName: io.jpom.system.init
