--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
+    "element-ui": "^2.15.1",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.11",
@@ -26,6 +27,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
