--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </description>
     <inceptionYear>2017</inceptionYear>
     <version>2.5.0</version>
-    <url>https://gitee.com/keepbx/Jpom</url>
+    <url>https://gitee.com/dromara/Jpom</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
