add introJs and add feature for home page guide

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.1",
+    "intro.js": "^3.4.0",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.11",
