--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -41,7 +41,13 @@
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
-            <version>5.4.0.201906121030-r</version>
+            <version>5.12.0.202106070339-r</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
         </dependency>
 
         <dependency>
