--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
+            <artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
             <version>5.12.0.202106070339-r</version>
         </dependency>
 
