--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
     name: jpomServer
   profiles:
     active: dev
-
+  mvc:
+    throw-exception-if-no-handler-found: true
   servlet:
     multipart:
       max-request-size: 2GB
