--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -28,6 +28,10 @@ log:
 db:
   # 日志存储条数，将自动清理旧数据,配置小于等于零则不清理
   logStorageCount: 100000
+  # 数据库账号
+  userName:
+  # 数据库密码
+  userPwd:
 # 构建相关配置
 build:
   # 最多保存多少份历史记录
