增 ssh 执行命令初始化环境变量配置

--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -42,4 +42,4 @@ build:
   itemMaxHistoryCount: 50
 ssh:
   # ssh 执行命令的 默认加载的环境变量
-  initEnv:
+  initEnv: source /etc/profile && source ~/.bash_profile && source ~/.bashrc
