--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,9 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 200
 
-[*.{json,yml}]
+[*.{json, yml}]
 indent_style = space
 indent_size = 2
 
