新增下载远程文件的接口、新增下载远程文件 url 白名单

--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -32,4 +32,4 @@ request:
   trimAll: true
   parameterXss: false
 #在线编辑格式
-fileFormat: txt|yml|conf|properties|ini
+#fileFormat: txt|yml|conf|properties|ini
