上传文件到插件端（节点）超时配置独立,采用 server 端全局配置

--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -43,3 +43,6 @@ build:
 ssh:
   # ssh 执行命令的 默认加载的环境变量
   initEnv: source /etc/profile && source ~/.bash_profile && source ~/.bashrc
+node:
+  # 上传文件的超时时间 单位秒,最短5秒中
+  uploadFileTimeOut: 300
