更换文件编辑器为codeMirror

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.4.8",
     "vuex": "^3.5.1",
     "xterm": "^4.9.0",
