--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -8,34 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.3",
-    "axios": "^0.21.0",
-    "core-js": "^3.6.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "ant-design-vue": "^1.7.6",
+    "axios": "^0.21.1",
+    "core-js": "^3.16.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.1",
     "intro.js": "^3.4.0",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
-    "vue-router": "^3.4.8",
+    "vue-router": "^3.5.2",
     "vuex": "^3.5.1",
-    "xterm": "^4.9.0",
+    "xterm": "^4.13.0",
     "xterm-addon-attach": "^0.6.0",
-    "xterm-addon-fit": "^0.4.0"
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-import": "^1.13.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.15.1",
+    "prettier": "^2.3.2",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
