新增 h2 控制台配置属性

--- a/modules/server/src/main/resources/application-dev.yml
+++ b/modules/server/src/main/resources/application-dev.yml
@@ -5,3 +5,10 @@ server:
   servlet:
     session:
       persistent: true
+
+# spring 相关配置
+spring:
+  h2:
+    console:
+      # 是否开启 web 访问数据库（url: http://${ip}:${port}/h2-console）
+      enabled: true
