--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -39,7 +39,7 @@ spring:
   h2:
     console:
       # 是否开启 web 访问数据库（url: http://${ip}:${port}/h2-console）
-      enabled: true
+      enabled: false
 # 构建相关配置
 build:
   # 最多保存多少份历史记录
@@ -50,5 +50,5 @@ ssh:
   # ssh 执行命令的 默认加载的环境变量
   initEnv: source /etc/profile && source ~/.bash_profile && source ~/.bashrc
 node:
-  # 上传文件的超时时间 单位秒,最短5秒中
+  # 上传文件的超时时间 单位秒,最短5秒钟
   uploadFileTimeOut: 300
