显示分发结果，节点编辑 ID 回显，加载默认拦截器配置

--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -24,6 +24,7 @@ banner:
 interceptor:
   resourceHandler: /**,/static/**,/favicon.ico
   resourceLocation: classpath:/dist/,classpath:/static/,classpath:/static/favicon.ico
+  initPackageName: io.jpom.common.interceptor
 # 启动完成自动初始化指定包
 preload:
   packageName: io.jpom.system.init
