--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.15.1",
     "intro.js": "^3.4.0",
+    "jshint": "^2.13.1",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.14",
@@ -28,8 +29,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/cli-service": "~4.5.13",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
