--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -65,9 +65,18 @@
 					</archive>
 				</configuration>
 			</plugin>
-
-
 		</plugins>
+		<resources>
+			<!--版权文件,更新日志-->
+			<resource>
+				<filtering>false</filtering>
+				<directory>../../</directory>
+				<includes>
+					<include>CHANGELOG.md</include>
+					<include>LICENSE</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 	<profiles>
 		<profile>
