服务端在线升级显示更新日志

--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.1",
     "intro.js": "^3.4.0",
     "jshint": "^2.13.1",
+    "markdown-it-vue": "^1.1.6",
     "qs": "^6.9.4",
     "sha1": "^1.1.1",
     "vue": "^2.6.14",
