--- a/modules/agent/pom.xml
+++ b/modules/agent/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>Agent</artifactId>
+	<artifactId>agent</artifactId>
 	<version>2.7.0</version>
 	<name>Jpom 插件端</name>
 	<properties>
