update h2-console page for remote client access

--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -44,6 +44,9 @@ spring:
     console:
       # 是否开启 web 访问数据库（url: http://${ip}:${port}/h2-console）
       enabled: false
+      # 是否允许远程访问，默认为 false（当部署到服务器上之后，是否可以通过其他浏览器访问数据库）
+      settings:
+        web-allow-others: false
 # 构建相关配置
 build:
   # 最多保存多少份历史记录
