--- a/modules/server/src/main/resources/bin/extConfig.yml
+++ b/modules/server/src/main/resources/bin/extConfig.yml
@@ -50,6 +50,8 @@ build:
   maxHistoryCount: 1000
   # 单个最多保存多少份历史记录
   itemMaxHistoryCount: 50
+  # 构建命令是否检查 存在删除命令
+  checkDeleteCommand: true
 ssh:
   # ssh 执行命令的 默认加载的环境变量
   initEnv: source /etc/profile && source ~/.bash_profile && source ~/.bashrc
