同步节点项目信息修护

--- a/modules/server/src/main/resources/application.yml
+++ b/modules/server/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   application:
     name: jpomServer
   profiles:
-    active: dev
+    active: local
   mvc:
     throw-exception-if-no-handler-found: true
   servlet:
