--- a/modules/server/src/main/resources/application-local.yml
+++ b/modules/server/src/main/resources/application-local.yml
@@ -11,4 +11,4 @@ spring:
   h2:
     console:
       # 是否开启 web 访问数据库（url: http://${ip}:${port}/h2-console）
-      enabled: false
+      enabled: true
