--- a/web-vue/package.json
+++ b/web-vue/package.json
@@ -21,6 +21,7 @@
     "sha1": "^1.1.1",
     "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
+    "vue-json-viewer": "^2.2.20",
     "vue-router": "^3.5.2",
     "vuex": "^3.5.1",
     "xterm": "^4.13.0",
