控制台编码格式

--- a/modules/agent/src/main/resources/application.yml
+++ b/modules/agent/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       max-request-size: 2GB
       max-file-size: 1GB
 banner:
-  msg: Jpom-Agent管理系统启动中
+  msg: Jpom-Agent Starting
 # 启动完成自动初始化指定包
 preload:
   packageName: io.jpom.system.init
