--- a/modules/agent/src/main/resources/bin/extConfig.yml
+++ b/modules/agent/src/main/resources/bin/extConfig.yml
@@ -35,6 +35,8 @@ consoleLog:
   reqXss: true
   # 是否记录接口响应日志
   reqResponse: true
+  # 控制台编码格式
+  charset:
 project:
   # 是否禁用 使用jmx获取项目状态
   disableVirtualMachine: false
